--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -18,7 +18,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install vyos-modular
-          sudo apt install docker
       - name: Init VyOS Modular
         run: |
           mkdir resources
@@ -26,7 +25,7 @@ jobs:
       - name: Build Base ISO
         # as of now we currently use 1.4 "sagitta" as the base
         run: |
-          vyos-modular build_iso -b 1.4.0 -r sagitta
+          sudo vyos-modular build_iso -b 1.4.0 -r sagitta
       - name: Logging
         run: |
           ls -la .
