--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -14,10 +14,11 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
+      - name: escalate
+        run: sudo su
       - name: Install Deps
         run: |
-          python -m pip install --upgrade pip
-          pip install vyos-modular
+          sudo pip install vyos-modular
       - name: Init VyOS Modular
         run: |
           mkdir resources
@@ -25,7 +26,7 @@ jobs:
       - name: Build Base ISO
         # as of now we currently use 1.4 "sagitta" as the base
         run: |
-          sudo vyos-modular build_iso -b 1.4.0 -r sagitta
+          vyos-modular build_iso -b 1.4.0 -r sagitta
       - name: Logging
         run: |
           ls -la .
