--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -6,16 +6,18 @@ permissions:
   contents: write
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  #base-build:
+  #  runs-on: ubuntu-24.04
+  #  steps:
+
+  modular-build:
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python 3.10
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
-      - name: escalate
-        run: sudo su
       - name: Install Deps
         run: |
           pip install vyos-modular
