--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -17,7 +17,7 @@ jobs:
     permissions:
       contents: write
     container:
-      image: vyos/vyos-build:current
+      image: vyos/vyos-build:sagitta
       options: --sysctl net.ipv6.conf.lo.disable_ipv6=0 --privileged
     outputs:
       BUILD_BY: ${{ steps.set_env_variables.outputs.BUILD_BY }}
