--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -17,7 +17,7 @@ jobs:
     permissions:
       contents: write
     container:
-      image: vyos/vyos-build:sagitta
+      image: vyos/vyos-build:current
       options: --sysctl net.ipv6.conf.lo.disable_ipv6=0 --privileged
     outputs:
       BUILD_BY: ${{ steps.set_env_variables.outputs.BUILD_BY }}
@@ -52,10 +52,11 @@ jobs:
           # This might change with future Debian versions when they ship minisign
           repository: vyos/vyos-build
           path: vyos-build
-          ref: 1.4.0
+          ref: 1.4.0 # We are using 1.4.0 as the base ISO currently
 
       - name: Build generic ISO image
         id: build_generic_iso
+        # Newer versions use 'generic' as apposed to 'iso' as the build flavor, currently we are using 1.4.0 so the build flavor will be 'iso'
         run: |
           cd vyos-build
           sudo --preserve-env ./build-vyos-image \
