--- a/config.yml
+++ b/config.yml
@@ -2,8 +2,8 @@ name: bridge-build
 vyos_target:
   # This is used to target an appropriate vyos-core version when using modules
   # that patch the core
-  branch: 1.4.0
-  release: sagitta
+  branch: current
+  release: current
   # This is the name of an iso found under resources/isos
   iso: base.iso
 modules:
